@@ -17,6 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.lang.reflect.Array;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReviewService {
@@ -65,7 +66,7 @@ public class ReviewService {
         List<ReviewResponseDto> reviewList =reviews.getContent()
                                                     .stream()
                                                     .map(ReviewResponseDto::new)
-                                                    .toList();
+                                                    .collect(Collectors.toList());
 
         return ReviewSlice.getSlice(reviewList,size);
 
